feat: Add new page

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+blockquote 
+{
+            font-size: 16px;
+            padding: 0 1em;
+            color: #777;
+            border-left: .25em solid #ddd
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+blockquote>:first-child
+{
+            margin-top: 0
 }
+blockquote>:last-child 
+{
+            margin-bottom: 0
+} 
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+.flex{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
